version 2.12.0: standardize tracked and generated text endings